completed edit functionality for admin on users and tasks
